SubVersion: $Id$

Log:

- 25/09/2005, version 0.0.3: roms
	- modified TiEmu virtual link for Windows: don't use .shared section 
	any more. This breaks compat with older revision of the library but 
	we are still in beta stage.
	- "fixed" TiEmu virtual link for Linux: it seems it has never been
	used/tested because it was un-finished ?!
	
- 14/09/2005, version 0.0.2: roms
	- fixed compilation issues with MinGW
	- check mode supported by SilverLink under Linux (Kevin)
	- rewritten GrayLink support (WaitCommEvent is broken)
	- tempo for link opening
	- reset cable at opening stage
	- fixed build of doc/ (Tijl)
	- *BSD port (Tijl)
	- linkport cable for specific TiEmu use
	- some enhancements

- 02/05/2005, version 0.0.1: roms
	- API frozen
	- added working probing support
	- clean-up

- 27/04/2005, version 0.0.1: roms
	- error management left untouched
	- logging reworked (use glib)
	- a single public header with functions & defs, others are private
	- slightly fixed namespace sheme
	- use strong types such as TiCalcModel, ...
	- glib is used for logging (not very much for strings)
	- documentation system has been changed
	- functions pointers have been removed
	- library has been fully documented
	- decreased number of headers to include (1 or 3)
	- reused code & concepts of Tijl Coosemans' libticables-3.9.0.
	
====[ Version II ]====

- 05/03/2005, version 3.8.9: roms
	Added gcc 4.0 -fvisibility flag support.
	Fixed getting of current handle in VTi link support with MinGW.
	Fixed bug: no support of LINK_VTL under Linux (bad method).
	
- 09/02/2005, version 3.8.8: roms
	Some clean-up and fixes in the virtual link cables.
	Removed windows.h dependancy in timeout.h.
	Fixed some MinGw compilation issues.

- 25/09/2004, version 3.8.7: roms
	Added USB direct cable support (kernel module).
	Added USB direct cable support (lib-usb).
	
- 11/06/2004, version 3.8.6: jb
	Added support for x86-64 (configure.ac, configure).

- 22/05/2004, version 3.8.6: roms